--- a/static/graphs.html
+++ b/static/graphs.html
@@ -8,10 +8,10 @@
         <img src="complete_data_graph.png" class="img-fluid" alt="graph2">
         <div class="image" src="complete_data_graph.png"></div>
         <p>some text about the graph 2</p>
-    
     </div>
-Kory's graph
-    <!-- <div class='tableauPlaceholder' id='viz1615860717653' style='position: relative'>
+
+    <!-- Kory's graph
+    <div class='tableauPlaceholder' id='viz1615860717653' style='position: relative'>
     <noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gl&#47;GlucoseVBMIconfirmed-1&#47;Sheet3&#47;1_rss.png'
     style='border: none' /></a></noscript>
     <object class='tableauViz'  style='display:none;'>
@@ -26,27 +26,24 @@ Kory's graph
     var scriptElement = document.createElement('script');                    
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';   
     vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-<<<<<<< HEAD
     </script> -->
 
-kylie's graph
-<div class='tableauPlaceholder' id='viz1615861691960' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Di&#47;DiabetesGraph1&#47;Sheet1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='DiabetesGraph1&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Di&#47;DiabetesGraph1&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1615861691960');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-=======
-    </script>
+<!-- <iframe src="https://public.tableau.com/views/DiabetesGraph1/Sheet1?:showVizHome=no&:embed=true" title="Graphs" height="1000" width="1000">
+</iframe> -->
+<!-- https://public.tableau.com/views/DiabetesGraph1/Sheet1?:language=en&:retry=yes&:display_count=y&:origin=viz_share_link -->
+<!-- <iframe src="https://public.tableau.com/views/test_16158643473080/Dashboard1?:showVizHome=no&:embed=true" title="Graphs" height="1000" width="1000">
+</iframe>
+<br><br> -->
 
-<div class='tableauPlaceholder' id='viz1615862215451' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Di&#47;DiabetesGraph1&#47;Sheet1&#47;1_rss.png' style='border: none' />
-    </a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' />
-    <param name='site_root' value='' /><param name='name' value='DiabetesGraph1&#47;Sheet1' />
-    <param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Di&#47;DiabetesGraph1&#47;Sheet1&#47;1.png' />
-    <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
-    <param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /></object></div>
-        <script type='text/javascript'>
-            var divElement = document.getElementById('viz1615862215451');
-            var vizElement = divElement.getElementsByTagName('object')[0];
-            vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
-            var scriptElement = document.createElement('script');
-            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);
-        </script>
->>>>>>> d54cb72e6b4c7633344581f5f06938d1d51c28f6
+<iframe src="https://public.tableau.com/views/DiabetesGraph1/CompleteData2?:showVizHome=no&:embed=true" title="" height="500" width="1000">
+</iframe>
+<br><br>
+<input type='button' value="Reload"  onclick="self.location.reload();"/>
+
+
+<iframe src="https://public.tableau.com/views/DiabetesGraph2/CompleteData1?:showVizHome=no&:embed=true" title="" height="500" width="1000">
+</iframe>
+<br><br>
+<input type='button' value="Reload"  onclick="self.location.reload();"/>
+
 </div>
