added graph text

--- a/static/graphs.html
+++ b/static/graphs.html
@@ -1,13 +1,13 @@
 <div class="container" style="margin-top:30px">
     <div class = "row">
-        <h2>Graph Heading 1</h2>
+        <h2>Matrix Correlation</h2>
         <img src="all_data_graph.png" class="img-fluid" alt="graph1">
         <div class="image" src="all_data_graph.png"></div>
-        <p>some text about the graph 1</p>
-        <h2>Graph Heading 2</h2>
+        <p>Using all the data from the dataset, we can see some rough correlations of specific attributes. With what we know about diabetes today it is not surprising that skin thickness and BMi are linked or linked, or that high glucose is more strongly tied to a a diabetes diagnosis.</p>
+        <h2>Matrix Correlation</h2>
         <img src="complete_data_graph.png" class="img-fluid" alt="graph2">
         <div class="image" src="complete_data_graph.png"></div>
-        <p>some text about the graph 2</p>
+        <p>While many people have used the entirety of this dataset for analysis, we realized that there were a number of empty rows, particularly for insulin. By removing the rows with missing data we see stronger correlations in glucose and insulin as well as glucose and outcome.</p>
     </div>
 
     <!-- Kory's graph
