WIP: fixed tableau

--- a/static/graphs.html
+++ b/static/graphs.html
@@ -46,4 +46,10 @@
 <br><br>
 <input type='button' value="Reload"  onclick="self.location.reload();"/>
 
+<iframe src="https://public.tableau.com/views/DiabetesStory_16158712422850/Story1?:showVizHome=no&:embed=true" title="" height="500" width="1000">
+</iframe>
+<br><br>
+<input type='button' value="Reload"  onclick="self.location.reload();"/>
+
+
 </div>
