--- a/static/graphs.html
+++ b/static/graphs.html
@@ -12,6 +12,10 @@
 <iframe src="https://public.tableau.com/views/DiabetesStory_16158712422850/Story1?:showVizHome=no&:embed=true" title="" height="500" width="1000">
 </iframe>
 <br><br>
+<br><br>
+<iframe src="https://public.tableau.com/views/GlucoseVBMIconfirmed-1st/GlucoseV_BMIConfirmedDiabetes?:showVizHome=no&:embed=true" title="" height="500" width="1000">
+</iframe>
+<br><br>
 <input type='button' value="Reload"  onclick="self.location.reload();"/>
 
 </div>
